--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@ Olive Oil <input type="number" id="olive"></input></br>
     olive = Math.round((flour*olive)*5)/5;
 
     document.getElementById('results').innerHTML = flour + ' ' + water + ' ' + yeast + ' ' + salt + ' ' + sugar + ' ' + olive;
+
+    console.log()
   }
 </script>
