--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h1>Pizza Calculator</h1>
 Number of Dough Balls <input type="number" id="qty"></input></br>
-Diameter of Pizza <input type="number" id="dia"></input></br>
-Hydration <input type="number" id="hydration"></input></br>
-Yeast <input type="number" id="yeast"></input></br>
-Salt <input type="number" id="salt"></input></br>
-Sugar <input type="number" id="sugar"></input></br>
-Olive Oil <input type="number" id="olive"></input></br>
+Diameter of Pizza (cm) <input type="number" id="dia"></input></br>
+Hydration (%) <input type="number" id="hydration"></input></br>
+Yeast (%) <input type="number" id="yeast"></input></br>
+Salt (%) <input type="number" id="salt"></input></br>
+Sugar (%) <input type="number" id="sugar"></input></br>
+Olive Oil (%) <input type="number" id="olive"></input></br>
 <button onclick="calculate()">Submit</button>
 <p id="results"></p>
 
