--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <div class="form-group">
             <label for="exampleFormControlInput1">Diameter of Pizza (cm)</label>
             <input type="text" id="dia" name="dia" class="form-control"></input>
+          </div>
           <div class="form-group">
             <label for="exampleFormControlInput1">Hydration (%)</label>
             <input type="text" id="hydration" name="hydration" class="form-control"></input>
@@ -46,14 +47,13 @@
             <label for="exampleFormControlInput1">Olive Oil (%)</label>
             <input type="text" id="olive" name="olive" class="form-control"></input>
           </div>
-  
           <button type="submit" class="btn btn-dark form-control">Submit</button>
+          <p style="margin-top:25px;" id="results"></p>
         </form>
       </div>
     </div>
-    
   </div>
-  <div class="fixed-panel">
+  <!-- <div class="fixed-panel">
     <div class="header">
       <h1>Pizza Calculator</h1>
     </div>
@@ -91,7 +91,7 @@
       </form>
     </div>
 
-  </div>
+  </div> -->
 
   <script src="index.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
