--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<meta charset="ISO-8859-1"> 
+<!DOCTYPE html>
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Saira:wght@100&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Saira:wght@100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  
 </head>
+
 <body>
-    
+
   <div id="container" class="flex-container">
     <div class="panel-left">
       <div class="header">
@@ -53,51 +54,19 @@
       </div>
     </div>
   </div>
-  <!-- <div class="fixed-panel">
-    <div class="header">
-      <h1>Pizza Calculator</h1>
-    </div>
-    <div class="form">
-      <form>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Number of Dough Balls</label>
-          <input type="text" id="qty" name="qty" class="form-control"></input>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Diameter of Pizza (cm)</label>
-          <input type="text" id="dia" name="dia" class="form-control"></input>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Hydration (%)</label>
-          <input type="text" id="hydration" name="hydration" class="form-control"></input>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Yeast (%)</label>
-          <input type="text" id="yeast" name="yeast" class="form-control"></input>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Salt (%)</label>
-          <input type="text" id="salt" name="salt" class="form-control"></input>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Sugar (%)</label>
-          <input type="text" id="sugar" name="sugar" class="form-control"></input>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Olive Oil (%)</label>
-          <input type="text" id="olive" name="olive" class="form-control"></input>
-        </div>
 
-        <button type="submit" class="btn btn-dark form-control">Submit</button>
-      </form>
-    </div>
-
-  </div> -->
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="index.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
+
 </body>
 
 </html>
